--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
-  # - title: "Suhyeon 블로그"
-    # url: https://suhyeon729.github.io/
+  - title: "Suhyeon 블로그"
+    url: https://suhyeon729.github.io/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
