--- a/_config.yml
+++ b/_config.yml
@@ -15,11 +15,11 @@
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "ko-KR"
+locale                   : "en-US"
 title                    : "Site Title"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "오수현"
+name                     : "Suhyeon"
 description              : "Data Engineering & Visualization"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "https://suhyeon729.github.io/"
@@ -94,7 +94,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "오수현"
+  name             : "Suhyeon Oh"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Studying"
   location         : "Seoul, Korea"
