--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 # main links
 main:
-  - title: "Suhyeon 블로그"
+  - title: "Suhyeon blog"
     url: https://suhyeon729.github.io/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
