--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,9 +4,9 @@ main:
     url: /categories/
   - title: "Tags"
     url: /tags/
-  - title: "About"
-    url: /about/
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
+  # - title: "About"
+    # url: /about/
+  - title: "Collections"
+    url: /collection-archive/
   # - title: "Sitemap"
   #   url: /sitemap/
